--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Appium Android Tests (External APK in Repo)
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -11,27 +12,50 @@ jobs:
     timeout-minutes: 60
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Java
-      uses: actions/setup-java@v4
-      with:
-        distribution: temurin
-        java-version: '17'
-        cache: maven
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
+          cache: maven
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: npm
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: npm
 
-    - name: Install Appium
-      run: |
-        npm install -g appium
-        appium -v
+      - name: Install Appium
+        run: |
+          npm install -g appium
+          appium -v
 
-    - name: Start Emulator and Execute Appium Tests
-      uses: reactivecircus/android-emulator-runner@v2
-      with:
+      - name: Start Emulator and Execute Appium Tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 30
+          target: google_apis
+          arch: x86_64
+          profile: "Nexus 6"
+          emulator-options: "-no-window -no-audio -no-boot-anim -no-snapshot -gpu swiftshader_indirect"
+          disable-animations: true
+          script: |
+            echo "Connected devices:"
+            adb devices
+
+            echo "Starting Appium server..."
+            appium --base-path /wd/hub --log-level error &
+            sleep 20
+
+            echo "Running Maven tests..."
+            mvn clean test
+
+      - name: Upload Test Reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: appium-test-reports
+          path: target/surefire-reports
