--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Checkout repository (includes APK)
+    # 1. Checkout repository (includes external APK in apps/)
     - name: Checkout repository
       uses: actions/checkout@v4
 
@@ -27,13 +27,13 @@ jobs:
       with:
         node-version: '20'
 
-    # 4. Install Appium
+    # 4. Install Appium server
     - name: Install Appium
       run: |
         npm install -g appium
         appium -v
 
-    # 5. Start Android Emulator + Run Tests
+    # 5. Start Android Emulator + Run Appium Tests
     - name: Start Emulator and Execute Appium Tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
@@ -44,19 +44,29 @@ jobs:
         emulator-options: -no-window -no-audio -no-boot-anim -gpu swiftshader_indirect
         disable-animations: true
         script: |
-          echo "Checking connected devices..."
-          adb devices
-
-          echo "Waiting for emulator to be ready..."
+          echo "Waiting for emulator device to appear..."
           adb wait-for-device
 
-          echo "Confirming emulator boot completion..."
-          until adb shell getprop sys.boot_completed | grep -m 1 '1'; do
-            echo "Emulator not ready yet, waiting..."
+          echo "Restarting ADB to fix offline state..."
+          adb kill-server
+          adb start-server
+          sleep 10
+
+          echo "Waiting for device to come online..."
+          until adb devices | grep emulator | grep device; do
+            echo "Device still offline, waiting..."
             sleep 10
           done
 
-          echo "Emulator is fully booted."
+          echo "Device is online."
+
+          echo "Waiting for Android system to finish booting..."
+          until adb shell getprop sys.boot_completed | grep -m 1 '1'; do
+            echo "System not booted yet..."
+            sleep 10
+          done
+
+          echo "Emulator fully booted."
 
           echo "Starting Appium server..."
           appium --log-level error &
