--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,30 +10,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Checkout repository (includes external APK in apps/)
+    # 1. Checkout repository
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # 2. Setup Java (for Maven & Appium client)
+    # 2. Setup Java
     - name: Set up Java
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '17'
 
-    # 3. Setup Node.js (for Appium server)
+    # 3. Setup Node.js
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '20'
 
-    # 4. Install Appium server
+    # 4. Install Appium
     - name: Install Appium
       run: |
         npm install -g appium
         appium -v
 
-    # 5. Start Android Emulator + Run Appium Tests
+    # 5. Start Emulator and Run Tests (STABLE VERSION)
     - name: Start Emulator and Execute Appium Tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
@@ -41,32 +41,50 @@ jobs:
         target: google_apis
         arch: x86
         profile: pixel
-        emulator-options: -no-window -no-audio -no-boot-anim -gpu swiftshader_indirect
+        emulator-options: >
+          -no-window
+          -no-audio
+          -no-boot-anim
+          -no-snapshot
+          -gpu swiftshader_indirect
         disable-animations: true
         script: |
-          echo "Waiting for emulator device to appear..."
+          echo "Waiting for emulator process..."
           adb wait-for-device
 
-          echo "Restarting ADB to fix offline state..."
+          echo "Initial device list:"
+          adb devices
+
+          echo "Giving emulator extra time for cold boot..."
+          sleep 60
+
+          echo "Restarting ADB after cold boot..."
           adb kill-server
           adb start-server
           sleep 10
 
-          echo "Waiting for device to come online..."
+          echo "Waiting for device to become ONLINE..."
+          timeout 600 bash -c '
           until adb devices | grep emulator | grep device; do
             echo "Device still offline, waiting..."
             sleep 10
           done
+          '
 
-          echo "Device is online."
+          echo "Device is ONLINE."
 
-          echo "Waiting for Android system to finish booting..."
-          until adb shell getprop sys.boot_completed | grep -m 1 '1'; do
+          echo "Waiting for Android system to complete boot..."
+          timeout 600 bash -c '
+          until adb shell getprop sys.boot_completed | grep -m 1 "1"; do
             echo "System not booted yet..."
             sleep 10
           done
+          '
 
-          echo "Emulator fully booted."
+          echo "Emulator is fully booted and stable."
+
+          echo "Unlocking screen..."
+          adb shell input keyevent 82
 
           echo "Starting Appium server..."
           appium --log-level error &
@@ -75,7 +93,7 @@ jobs:
           echo "Running Appium tests..."
           mvn clean test
 
-    # 6. Upload test reports
+    # 6. Upload reports
     - name: Upload Test Reports
       uses: actions/upload-artifact@v4
       with:
