--- a/appium.properties
+++ b/appium.properties
@@ -1,7 +1,6 @@
 platformName=Android
-deviceName=emulator-5554
-platformVersion=13
-app=apps/notepad-30-30-01-690.apk
+deviceName=Android Emulator
 automationName=UiAutomator2
+app=apps/notepad-30-30-01-690.apk
 appPackage=com.example.externalapp
 appActivity=com.example.externalapp.MainActivity
